correction on scrollbar in app.css

--- a/client/src/style/app.css
+++ b/client/src/style/app.css
@@ -1,5 +1,4 @@
 body {
-  overflow: hidden; /* Hide scrollbars */
   background-color: rgba(21, 0, 51, 0.726);
 }
 .navbar {
